[lworld] Auto-detect ValueClassPlugin JAR presence instead of requiring explicit VALUE_CLASS_PLUGIN flag